Fix img overflowing

--- a/src/client/js/Blog/Post/components/Article/Article.pcss
+++ b/src/client/js/Blog/Post/components/Article/Article.pcss
@@ -3,6 +3,13 @@
 .Article {
     flex-basis: 75%;
     max-width: 75%;
+
+    & .content {
+
+        & img {
+            width: 100%;
+        }
+    }
 }
 
 @media (--medium-only) {
